frontend/public/assets/css/03-editor-view.css
.note-list-controls input,
.note-list-controls select {
  margin: 6.5px 0;

  /* in the mobile view, we don't set a fixed height of the bar, so the margin
  of these elements must be set that it matches a total height of 50px */
}

.note-list-sort-mode-select {
  width: 230px;
}

@media only screen and (max-width: 1280px) {
  .note-list-sort-mode-select {
    width: 75px;
  }
}

/******************************
  Note list item
******************************/

.note-list-item {
  text-align: left;
  display: flex;
  background-color: var(--nli-color);
  margin: auto;
  margin-bottom: var(--default-margin);
  border-radius: var(--border-radius);
  overflow: hidden;
  user-select: none;
  max-width: var(--max-content-width);
}

.note-list-item-main {
  cursor: pointer;
  padding: var(--default-padding);
  width: calc(100% - 70px);
}

.note-list-item-main .title {
  font-size: var(--default-font-size);
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
}

.note-list-item-second-row {
  font-size: var(--small-font-size);
  display: flex;
  justify-content: space-between;
}

.note-list-item .note-list-item-linked-notes-indicator {
  text-align: left;
  padding: 5px;
  width: 30px;
  background-color: var(--nli-color-unlinked);
  display: flex;
  align-items: center;
  justify-content: center;
}

.note-list-item-linked-notes-indicator-content {
  text-align: center;
}

.note-list-item-linked-notes-indicator-content .svg-icon {
  vertical-align: bottom;
  height: 20px;
  width: 28px;
  object-fit: cover;
  margin-bottom: 4px;
}

.note-list-item:not(.active) .note-list-item-linked-notes-indicator.linkable {
  cursor: pointer;
}

.note-list-item .title {
  font-weight: bold;
}

.note-list-item .index {
  width: 56px;
}

.note-features span {
  margin: 0 2px;
}

.note-list-item .linked-notes-indicator-number {
  text-align: center;
  display: block;
  font-weight: bold;
}

.note-list-item .unlinked-note-indicator {
  background: var(--error-and-danger-text-color);
  width: 18px;
  height: 18px;
  border-radius: 100px;
  margin: auto;
}

.dangling-indicator {
  background: var(--error-and-danger-text-color);
  width: 18px;
  height: 18px;
  border-radius: 100px;
  margin: 0;
  align-self: center;
  flex-shrink: 0;
}

.note-list-item .info {
  display: inline;
}

.note-list-item:not(.active) .note-list-item-main:hover {
  background-color: var(--nli-color-hover);
}

.note-list-item[class*="active"] {
  background-color: var(--nli-color-active) !important;
}

.note-list-item.active .note-list-item-linked-notes-indicator {
  background-color: var(--nli-color-active);
}

.note-list-item[class*="linked"] .note-list-item-linked-notes-indicator {
  background-color: var(--nli-color-linked);
}

/******************************
  Note
******************************/

.note-controls,
.note-list-controls {
  padding: 0 10px;
  display: flex;
  justify-content: space-between;
  align-items: center;
  max-width: 100vw;
  overflow: hidden;
}

.note-controls {
  border-bottom: var(--default-border);
  user-select: none;
}

.note-controls-left,
.note-controls-right {
  display: flex;
  flex-wrap: wrap;
}

.note-controls-right img[width="24"][height="24"] {
  padding: 13px; /* (50px - 24px) / 2 */
}

.note-content {
  max-width: var(--max-content-width);
  margin: auto;
}

.note-meta-paragraph {
  font-size: var(--default-font-size);
}

/******************************
  Search presets
******************************/

.search-preset {
  display: flex;
  justify-content: space-between;
  align-items: center;
  margin-bottom: var(--default-margin);
}

.search-preset-buttons {
  flex-shrink: 0;
}

/******************************
  Pagination
******************************/

.pagination {
  text-align: center;
  word-break: break-all;
}

.pagination ul {
  list-style: none;
  padding: 0;
  margin: 0;
  display: flex;
  align-items: center;
  justify-content: center;
  flex-wrap: wrap;
}

.pagination-ellipsis {
  margin-right: 10px;
}

.pagination-button-selected {
  background-color: var(--button-background-color-active);
  font-weight: bold;
}

/******************************
  Misc
******************************/

.list-section {
  padding: var(--default-margin);
  padding-bottom: 0;
}

.list-section h1 {
  margin-top: 0;
}

.list-section input {
  margin-right: var(--default-margin);
}

.note-list-controls {
  border-bottom: var(--default-border);
}

.note-search-disclaimer {
  font-size: var(--default-font-size);
  margin-top: 0;
  text-align: center;
}

.note-list {
  border-collapse: collapse;
  width: 100%;
}

@media only screen and (min-width: 1281px) {
  .sidebar {
    grid-area: 1 / 1 / 2 / 2;
    width: var(--xl-list-width);
    border-right: var(--default-border);
    z-index: 1;
  }

  .note-controls,
  .note-list-controls {
    height: var(--header-bar-height);
  }

  .list-section {
    overflow-y: scroll;

    /* height is 100vh minus 2 headers of 50px height and minus top padding of
    this element */
    height: calc(100vh - (2 * var(--header-bar-height)) - var(--default-margin));
  }

  .main-content-besides-sidebar {
    grid-area: 1 / 2 / 2 / 3;
    width: calc(100vw - var(--xl-list-width));
  }

  .note {
    padding: 0 48px;
    overflow-y: auto;
    margin: 0;
    height: calc(100vh - (2 * var(--header-bar-height)));
  }
}

@media only screen and (max-width: 1280px) {
  main {
    grid-template-columns: 1fr;
  }

  .note-controls,
  .note-list-controls {
    flex-wrap: wrap;
  }

  .main-content-besides-sidebar {
    grid-area: 1 / 1 / 2 / 2;
  }

  .note-content {
    padding: 0 var(--default-margin);
  }
}

/******************************
  Editor
******************************/

textarea.editor {
  background: var(--accent-color-interactible);
  border: none;
  width: calc(100% - 10px);
  height: 500px;
  font-size: 18px;
  color: var(--main-content-color);
  outline: none;
  font-family: Hack, monospace;
  padding: 5px;
  resize: none;
  border-radius: var(--border-radius);
}

textarea.note-title {
  font-size: var(--h1-font-size);
  font-weight: bold;
  margin-top: 30px;
  margin-bottom: 0;
  color: var(--font-color);
  font-family: var(--main-font);
  min-height: 33px;
  height: 33px;
  resize: none;
  overflow: hidden;
  background: var(--accent-color-interactible);
  border: none;
  width: calc(100% - 10px);
  outline: none;
  padding: 5px;
  border-radius: var(--border-radius);
}

